# ubuntu-kylin-wizard

./: AUTHORS  CMakeLists.txt  EMConverter.cpp  EMConverter.h  README  README.md  appmodel.cpp  appmodel.h  blur.cpp  blur.h  config.h.cmake  draw.cpp  draw.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rawpixel.cpp  rawpixel.h  resource.qrc  style.cpp  style.h  ubuntu-kylin-wizard.desktop.in  ubuntu-kylin-wizard.pro  wizard-qt.pro  wizard.qrc
data/: org.ukui.wizard.gschema.xml  ubuntu-kylin-wizard.desktop  wizard.qrc  wizard.qss
debian/: changelog  compat  control  copyright  rules  ubuntu-kylin-wizard.manpages
man/: CMakeLists.txt  ubuntu-kylin-wizard.1
po/: POTFILES.in  af.po  ar.po  bg.po  bn.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  km.po  ko.po  lo.po  lt.po  mk.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  (+20 more)
resources/: wizard.css  wizard.ui
src/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  EMConverter.cpp  Page.cpp  Page.h  RawPixel.cpp  Wizard.cpp  Wizard.h  appinfo.cpp  appinfo.h  appmodel.cpp  appmodel.h  blur.cpp  blur.h  config.cpp  config.h  draw.cpp  draw.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.cpp  style.h
src/tools/: EMConverter.h  RawPixel.h  blur.cpp  blur.h
src/ukui-wizard/: UkuiWizard.cpp  UkuiWizard.h  UkuiWizard.ui
src/unity-wizard/: Page.h  Wizard.cpp  WizardSettings.cpp  WizardSettings.h
